Closed
Bug 1430869
Opened 8 years ago
Closed 8 years ago
The taller a table caption is the more rows of a table lose their border with border-collapse: collapse
Categories
(Core :: Graphics: WebRender, defect, P1)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
mozilla61
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox57 | --- | unaffected |
| firefox58 | --- | unaffected |
| firefox59 | --- | disabled |
| firefox61 | --- | fixed |
People
(Reporter: Kwan, Assigned: Gankra)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(3 files)
STR:
1) set gfx.webrender.all to true in about:config and restart
2) load the attached testcase
3) observe unrendered borders
The number of rows without borders seems to be almost Math.floor(captionHeight / rowHeight), so there's a nice N-1 rows deleted to N rows of caption relation in the testcase.
Comment 1•8 years ago
|
||
mozregression --good 2017-05-01 --bad 2017-10-01 --pref layers.acceleration.force-enabled:true gfx.webrender.enabled:true gfx.webrendest.enabled:true gfx.webrender.blob-images:true gfx.webrender.layers-free:true startup.homepage_welcome_url:"https://bug1430869.bmoattachments.org/attachment.cgi?id=8943001"
> 5:56.04 INFO: Last good revision: 5a8f2dcbeac0677b5aae0f9fd43d6a33309b4a6b
> 5:56.04 INFO: First bad revision: 979f11deabd01d6cb897d064d3d9ed11ea8baa93
> 5:56.04 INFO: Pushlog:
> https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=5a8f2dcbeac0677b5aae0f9fd43d6a33309b4a6b&tochange=979f11deabd01d6cb897d064d3d9ed11ea8baa93
>
> 5:57.23 ERROR: Unable to exploit the merge commit. Origin branch is mozilla-central, and the commit message for 979f11de was:
> Merge graphics to m-c a=merge a=release
> IGNORE BAD COMMIT MESSAGES because something landed and was backed out for no bug number
Blocks: webrender-site-issues
Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
status-firefox57:
--- → unaffected
status-firefox58:
--- → unaffected
status-firefox59:
--- → disabled
status-firefox-esr52:
--- → unaffected
Ever confirmed: true
OS: Unspecified → All
Hardware: Unspecified → All
Comment 2•8 years ago
|
||
(In reply to Jan Andre Ikenmeyer [:darkspirit] from comment #1)
> > 5:56.04 INFO: Pushlog:
> > https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=5a8f2dcbeac0677b5aae0f9fd43d6a33309b4a6b&tochange=979f11deabd01d6cb897d064d3d9ed11ea8baa93
> >
Probably from the original table implementation in bug 1344082.
Updated•8 years ago
|
Blocks: stage-wr-trains
Priority: -- → P1
Updated•8 years ago
|
Assignee: nobody → mtseng
Updated•8 years ago
|
Assignee: mephisto41 → a.beingessner
Comment 3•8 years ago
|
||
Not an accessibility issue, but looks like a graphics bug to me. Clearing a11y review flag.
Flags: a11y-review?
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 5•8 years ago
|
||
Comment 6•8 years ago
|
||
Comment on attachment 8970306 [details]
Bug 1430869 - use mVisibleRect instead of GetRect.
Markus is a better reviewer than me.
Attachment #8970306 -
Flags: review?(jmuizelaar) → review?(mstange)
| Assignee | ||
Comment 7•8 years ago
|
||
Try looks good, but suggests I need to write a regression test.
| Assignee | ||
Comment 8•8 years ago
|
||
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 10•8 years ago
|
||
Try looks good, ready for review.
| Assignee | ||
Updated•8 years ago
|
Attachment #8970306 -
Flags: review?(mstange) → review?(jmuizelaar)
Attachment #8970937 -
Flags: review?(mstange)
| Assignee | ||
Updated•8 years ago
|
Attachment #8970306 -
Flags: review?(jmuizelaar) → review?(mstange)
Comment 11•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8970306 [details]
Bug 1430869 - use mVisibleRect instead of GetRect.
https://reviewboard.mozilla.org/r/239098/#review245426
Attachment #8970306 -
Flags: review?(mstange) → review+
Comment 12•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8970937 [details]
Bug 1430869 - add reftest for border collapse and captions.
https://reviewboard.mozilla.org/r/239696/#review245430
Attachment #8970937 -
Flags: review?(mstange) → review+
| Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Comment 13•8 years ago
|
||
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/04465c06888b
use mVisibleRect instead of GetRect. r=mstange
https://hg.mozilla.org/integration/autoland/rev/9536d401ce06
add reftest for border collapse and captions. r=mstange
Keywords: checkin-needed
Comment 14•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/04465c06888b
https://hg.mozilla.org/mozilla-central/rev/9536d401ce06
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox61:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Updated•8 years ago
|
Keywords: regression
Updated•8 years ago
|
Flags: qe-verify+
Comment 15•8 years ago
|
||
I could reproduce this bug only on Windows 10 x32 platform with the Nightly build 59.0a1 (2018-01-16). On Nightly 62.0a1 (2018-05-21) and Beta 61.0b6 the issue is no longer reproducible.
I couldn’t see the issue, neither on Windows 10 x64, on Beta 61.0b (on the latest Nightly I encountered the same behavior mentioned in bug 1461647, so I was unable to verified it), nor on macOS 10.13 on the same latest Firefox builds (61.0b6 and 62.0a1).
On Ubuntu 16.04 x32, the issue is still reproducible on the latest Firefox version(see screenshot: https://drive.google.com/open?id=1G5GJQN-qFeEb1E0cyjuHIsnPGHm_-ntg).
I would also add that, the related issue mentioned above (bug 1461054) is reproducible, both on Ubuntu 16.04 x32 and macOS 10.13, but not on Windows platforms.
Comment 16•8 years ago
|
||
The behavior encountered on Ubuntu 16.04 x 32, mentioned in comment 15 is no longer reproducible on latest Nightly 63.0a1(2018-07-01), based on the steps from comment 0. The provided test case looks good also, on Ubuntu 16.04 x64 and Windows 10 x32 platforms.
I no longer see the gfx.webrender.all pref on latest Beta build (62.0b4). Alexis, can you tell me please, what is the equivalent of this pref, in order to have a conclusion regarding this issue on the latest Firefox Beta?
Flags: needinfo?(a.beingessner)
| Assignee | ||
Comment 17•8 years ago
|
||
I'm not sure why this issue was tagged for release QA, webrender isn't riding the trains yet.
Flags: needinfo?(a.beingessner)
Comment 18•8 years ago
|
||
(In reply to Alexis Beingessner [:Gankro] from comment #17)
> I'm not sure why this issue was tagged for release QA, webrender isn't
> riding the trains yet.
Based on this, I'll remove qe-verify+ for verification in beta.
Flags: qe-verify+
You need to log in
before you can comment on or make changes to this bug.
Description
•